[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="listaPreenchida" type="Button" parent="."]
margin_left = 29.0
margin_top = 118.0
margin_right = 255.0
margin_bottom = 158.0
text = "LISTA PREENCHIDA - ATV 1"

[node name="listaVazia" type="Button" parent="."]
margin_left = 638.0
margin_top = 63.0
margin_right = 869.0
margin_bottom = 107.0
text = "LISTA VAZIA - ATV 2"

[node name="funcaoTexto" type="Button" parent="."]
margin_left = 33.0
margin_top = 363.0
margin_right = 257.0
margin_bottom = 406.0
text = "RETORNAR TEXTO - ATV 3"

[node name="funcaoReceba" type="Button" parent="."]
margin_left = 638.0
margin_top = 356.0
margin_right = 861.0
margin_bottom = 401.0
text = "RECEBER VALOR - ATV 4"

[node name="LineEdit" type="LineEdit" parent="."]
modulate = Color( 0.686275, 0.682353, 0.976471, 1 )
self_modulate = Color( 0.686275, 0.682353, 0.976471, 1 )
margin_left = 643.0
margin_top = 427.0
margin_right = 861.0
margin_bottom = 546.0

[node name="LineEdit2" type="LineEdit" parent="."]
modulate = Color( 0.686275, 0.682353, 0.976471, 1 )
self_modulate = Color( 0.686275, 0.682353, 0.976471, 1 )
margin_left = 645.0
margin_top = 133.0
margin_right = 863.0
margin_bottom = 246.0

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 273.0
margin_top = 36.0
margin_right = 616.0
margin_bottom = 463.0

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 304.0
margin_top = 72.0
margin_right = 577.0
margin_bottom = 420.0

[node name="Button" type="Button" parent="."]
modulate = Color( 0.988235, 0.0235294, 0.0235294, 1 )
self_modulate = Color( 1, 0, 0, 1 )
margin_left = 405.0
margin_top = 513.0
margin_right = 484.0
margin_bottom = 560.0
text = "APAGAR"

[connection signal="pressed" from="listaPreenchida" to="." method="_on_listaPreenchida_pressed"]
[connection signal="pressed" from="listaVazia" to="." method="_on_listaVazia_pressed"]
[connection signal="pressed" from="funcaoTexto" to="." method="_on_funcaoTexto_pressed"]
[connection signal="pressed" from="funcaoReceba" to="." method="_on_funcaoReceba_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
